# clawreel

./: .env.example  .gitignore  AGENTS.md  COMPOSER_FIX_TEST.md  CONTRIBUTING.md  CROSS_CHECK_REPORT.md  LICENSE  Makefile  README.md  REFACTOR_SUMMARY.md  SKILL.md  config.yaml  config.yaml.example  install.sh  pyproject.toml  requirements.txt  segments.json  setup.py
clawreel/: __init__.py  api_client.py  cli.py  composer.py  config.py  image_generator.py  music_generator.py  post_processor.py  publisher.py  resource_index.py  script_generator.py  segment_aligner.py  subtitle_extractor.py  tts_voice.py  utils.py  video_generator.py
docs/superpowers/specs/: 2026-04-11-clawreel-pipeline-optimization-design.md
scripts/: aishell_pipeline.py  batch.py  generate.py
src/: __init__.py  api_client.py  composer.py  config.py  hitl.py  image_generator.py  music_generator.py  post_processor.py  publisher.py  script_generator.py  tts_voice.py  utils.py  video_generator.py
tests/: test_pipeline.py  test_script_generator.py  test_tts.py
