[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clawreel"
version = "1.0.0"
description = "Agent-driven short video orchestration pipeline CLI."
authors = [
    {name = "Antigravity", email = "clawreel@openclaw.dev"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp",
    "pyyaml",
    "python-dotenv",
    "tenacity",
    "edge-tts",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
clawreel = "clawreel.cli:main"
